--- a/Class3/Makefile
+++ b/Class3/Makefile
@@ -1,17 +1,17 @@
 virginia:
 	terraform workspace new virginia || terraform workspace select virginia
 	terraform init
-	terraform apply -var-file virginia.tfvars --auto-approve
+	terraform destroy -var-file virginia.tfvars --auto-approve
 
 ohio:
 	terraform workspace new ohio || terraform workspace select ohio
 	terraform init
-	terraform apply -var-file ohio.tfvars --auto-approve
+	terraform destroy -var-file ohio.tfvars --auto-approve
 
 california:
 	terraform workspace new california || terraform workspace select california
 	terraform init
-	terraform apply -var-file california.tfvars --auto-approve
+	terraform destroy -var-file california.tfvars --auto-approve
 
 oregon:
 	terraform workspace new oregon || terraform workspace select oregon
@@ -40,6 +40,6 @@ california-destroy:
 oregon-destroy:
 	terraform workspace new oregon || terraform workspace select oregon
 	terraform init
-	terraform apply -var-file oregon.tfvars --auto-approve
+	terraform destroy -var-file oregon.tfvars --auto-approve
 
 destroy-all: virginia-destroy ohio-destroy california-destroy oregon-destroy
